--- a/clarity-react/.eslintrc.json
+++ b/clarity-react/.eslintrc.json
@@ -19,6 +19,10 @@
         "react"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "eqeqeq": "off",
+        "curly": "error",
+        "quotes": ["error", "double"],
+        "react/prop-types": 0
     }
 }
