added more workspaces

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,12 @@
         "<node_internals>/**"
       ],
       "program": "${file}"
-    }
+    },
+    {
+			"python.pythonPath": "python3",
+			"code-runner.executorMap": {
+				"python": "/usr/bin/python3"
+			}
+		}
   ]
 }
